--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,14 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "centralized-license-service"
 version = "1.0.0"
 description = "A comprehensive centralized license service for managing multi-brand software licenses"
-authors = [{name = "Development Team", email = "dev@example.com"}]
+authors = [{name = "George Mensah Minyillah", email = "georgeminyillah@gmail.com"}]
 readme = "README.md"
 requires-python = ">=3.10"
+license = { text = "MIT" }
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -20,6 +16,11 @@ classifiers = [
     "Framework :: Django",
     "Framework :: Django :: 5.1",
 ]
+
+[tool.setuptools.packages.find]
+include = ["license_service*", "licenses*", "users*"]
+exclude = ["logs*"]
+
 
 [tool.black]
 line-length = 88
